--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h3>Ingrédients</h3>
                 <ul id="recipeModalIngredients"></ul>
                 <h3>Étapes</h3>
-                <ol id="recipeModalSteps"></ol>
+                <ul id="recipeModalSteps"></ul>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Fermer</button>
