--- a/pages/recettes.html
+++ b/pages/recettes.html
@@ -8,7 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <title>HappyMeal</title>
-
+    <style>
+        .card-img-top {
+            object-fit: cover;
+            height: 225px;
+        }
+        .position-absolute {
+            position: absolute !important;
+            z-index: 999;
+        }
+    </style>
 </head>
 <body>
     <header class="p-3 mb-3 border-bottom">
@@ -24,77 +33,56 @@
             </ul>
     
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-              <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-            </form>
+                <input type="search" id="search-input" class="form-control" placeholder="Rechercher..." aria-label="Search">
+                <div id="search-results" class="position-absolute w-100 bg-white mt-1">
+                  <ul id="search-results-list" class="list-group"></ul>
+                </div>
+              </form>
           </div>
-        </div>
+        </div>        
     </header>
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary" style="background-image: url('../images/bg-index.jfif'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-        <div class="col-md-6 p-lg-5 mx-auto my-5">
-            <h1 class="display-3 fw-bold">Chez HappyMeal, nos recettes sont saines et variées</h1>
-            <h3 class="fw-normal text-muted mb-3">Il n'est jamais trop tard pour une alimentation équilibrée !</h3>
+    <div class="position-relative overflow-hidden p-3 p-md-4 m-md-2 text-center bg-body-tertiary" style="background-image: url('../images/bg-index.jfif'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 mx-auto">
+                    <h1 class="display-4 fw-bold">Bienvenue chez HappyMeal</h1>
+                    <h3 class="fw-normal text-muted mb-4">"Venez comme vous êtes !"</h3>
+                </div>
+            </div>
         </div>
-        <div class="product-device shadow-sm d-none d-md-block"></div>
-        <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
     </div>
 
     <div class="album py-5 bg-body-tertiary">
         <div class="container">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            <div class="col">
-              <div class="card shadow-sm">
-                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="../images/poulet-roti.jpg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text>
-                <div class="card-body">
-                  <p class="card-text">Recette de Poulet rôti aux herbes</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">Voir la recette</button>
-                    </div>
-                    <small class="text-body-secondary">60 mins</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col">  
-                <div class="card shadow-sm">
-                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="../images/ratatouille.jpg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text>
-                <div class="card-body">
-                <p class="card-text">Ratatouille provençale</p>
-                <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">Voir la recette</button>
-                    </div>
-                    <small class="text-body-secondary">60 mins</small>
-                </div>
-                </div>
-                </div>
-            </div>
-            <div class="col">  
-                <div class="card shadow-sm">
-                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="../images/risotto.webp" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text>
-                <div class="card-body">
-                <p class="card-text">Risotto aux champignons</p>
-                <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">Voir la recette</button>
-                    </div>
-                    <small class="text-body-secondary">40 mins</small>
-                </div>
-                </div>
-            </div>
-          </div>
+          <div class="row row-cols-1 row-cols-md-4 g-4" id="recipe-container"></div>
         </div>
-    </div><br>
-    <nav aria-label="...">
-        <ul class="pagination pagination-md justify-content-center">
-          <li class="page-item active" aria-current="page">
-            <span class="page-link">1</span>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-        </ul>
+    </div>
+    <!-- Modal pour afficher les détails de la recette -->
+    <div class="modal fade" id="recipeModal" tabindex="-1" aria-labelledby="recipeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="recipeModalLabel">Détails de la recette</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <img src="" class="img-fluid" id="recipeModalImage" alt="Image de la recette">
+                <h2 id="recipeModalName"></h2>
+                <p id="recipeModalDuration"></p>
+                <h3>Ingrédients</h3>
+                <ul id="recipeModalIngredients"></ul>
+                <h3>Étapes</h3>
+                <ul id="recipeModalSteps"></ul>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Fermer</button>
+            </div>
+        </div>
+        </div>
+    </div>
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-center" id="recipe-pagination"></ul>
     </nav>
-
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Accueil</a></li>
@@ -105,6 +93,7 @@
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/recette-card.js"></script>
+    <script src="../js/recettes.js"></script>
+    <script src="../js/barre-recherche.js"></script>
 </body>
 </html>
