--- a/pages/recettes.html
+++ b/pages/recettes.html
@@ -24,8 +24,8 @@
         <div class="container">
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="../index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                <span class="fs-4">HappyMeal</span>
-              </a>
+                <img class="col-md-3 w-50" src="images/Happy-logo.png" alt="Logo HappyMeal">
+            </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
               <li><a href="recettes.html" class="nav-link px-2 link-body-emphasis">Recettes</a></li>
               <li><a href="favoris.html" class="nav-link px-2 link-body-emphasis">Mes Favoris</a></li>
