--- a/pages/liste.html
+++ b/pages/liste.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="images/favicon.png">
+    <script defer   src="js/barre-recherche.js"></script>
+    <script defer src="../js/recettes.js"></script>
     <title>HappyMeal</title>
     <style>
         .card-img-top {
@@ -51,37 +53,12 @@
             </div>
         </div>
     </div>
+    <main>
+        <h1 class="">Ma liste de courses</h1>
+        <ul id="ingredients-container"></ul>
 
-    <!-- <div class="album py-5 bg-body-tertiary">
-        <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="recipe-container">
-                Les recettes seront affichées ici sous forme de cards par 3
-            </div>
-        </div>
-    </div>
-    Modal pour afficher les détails de la recette
-    < <div class="modal fade" id="recipeModal" tabindex="-1" aria-labelledby="recipeModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="recipeModalLabel">Détails de la recette</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <img src="" class="img-fluid" id="recipeModalImage" alt="Image de la recette">
-                <h2 id="recipeModalName"></h2>
-                <p id="recipeModalDuration"></p>
-                <h3>Ingrédients</h3>
-                <ul id="recipeModalIngredients"></ul>
-                <h3>Étapes</h3>
-                <ul id="recipeModalSteps"></ul>
-            </div>
-            <div class="modal-footer"> -->
-                <!-- <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Fermer</button>
-            </div>
-        </div>
-        </div>
-    </div> --> 
+    </main>
+     
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
