--- a/pages/recettes.html
+++ b/pages/recettes.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="../images/favicon.png">
+    <script defer   src="../js/barre-recherche.js"></script>
+    <script defer src="../js/recettes.js"></script>
+
     <title>HappyMeal</title>
     <style>
         .card-img-top {
@@ -27,9 +30,9 @@
                 <span class="fs-4">HappyMeal</span>
               </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="recettes.html" class="nav-link px-2 link-body-emphasis">Recettes</a></li>
-              <li><a href="favoris.html" class="nav-link px-2 link-body-emphasis">Mes Favoris</a></li>
-              <li><a href="liste.html" class="nav-link px-2 link-body-emphasis">Ma liste</a></li>
+              <li><a href="./recettes.html" class="nav-link px-2 link-body-emphasis">Recettes</a></li>
+              <li><a href="./favoris.html" class="nav-link px-2 link-body-emphasis">Mes Favoris</a></li>
+              <li><a href="./liste.html" class="nav-link px-2 link-body-emphasis">Ma liste</a></li>
             </ul>
     
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -92,8 +95,8 @@
         </ul>
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../js/recettes.js"></script>
-    <script src="../js/barre-recherche.js"></script>
+    <script src="../js/barre-recherche.js"></script> -->
 </body>
 </html>
