--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="images/favicon.png">
+    <script defer  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script defer  src="js/random-recipe.js"></script>
+    <script defer   src="js/barre-recherche.js"></script>
     <title>HappyMeal</title>
     <style>
         .card-img-top {
@@ -23,13 +26,13 @@
     <header class="p-3 mb-3 border-bottom">
         <div class="container">
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="../index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                 <img class="col-md-3 w-50" src="images/Happy-logo.png" alt="Logo HappyMeal">
             </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="recettes.html" class="nav-link px-2 link-body-emphasis">Recettes</a></li>
-              <li><a href="favoris.html" class="nav-link px-2 link-body-emphasis">Mes Favoris</a></li>
-              <li><a href="liste.html" class="nav-link px-2 link-body-emphasis">Ma liste</a></li>
+              <li><a href="pages/recettes.html" class="nav-link px-2 link-body-emphasis">Recettes</a></li>
+              <li><a href="pages/favoris.html" class="nav-link px-2 link-body-emphasis">Mes Favoris</a></li>
+              <li><a href="pages/liste.html" class="nav-link px-2 link-body-emphasis">Ma liste</a></li>
             </ul>
     
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -45,8 +48,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mx-auto">
-                    <h1 class="display-4 fw-bold">Retrouvez ici vos recettes favorites !</h1>
-                    <h3 class="fw-normal text-muted mb-4">"Mmhh....HappyMeal !"</h3>
+                    <h1 class="display-4 fw-bold">Bienvenue chez HappyMeal</h1>
+                    <h3 class="fw-normal text-muted mb-4">"Venez comme vous êtes !"</h3>
                 </div>
             </div>
         </div>
@@ -59,7 +62,6 @@
             </div>
         </div>
     </div>
-    
     <!-- Modal pour afficher les détails de la recette -->
     <div class="modal fade" id="recipeModal" tabindex="-1" aria-labelledby="recipeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
@@ -73,31 +75,29 @@
                 <h2 id="recipeModalName"></h2>
                 <p id="recipeModalDuration"></p>
                 <h3>Ingrédients</h3>
-                <ul id="recipeModalIngredients"></ul>
+                <ul id="recipeModalIngredients"> </ul>
                 <h3>Étapes</h3>
                 <ul id="recipeModalSteps"></ul>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fermer</button>
-                <button type="button" class="btn btn-primary add-to-shopping-list-btn">Ajouter tous les ingrédients à ma liste</button>
+                <button type="button" class="btn btn-warning add-to-favorites-btn">Ajouter aux favoris</button>
             </div>
         </div>
         </div>
     </div>
 
-
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Accueil</a></li>
-          <li class="nav-item"><a href="recettes.html" class="nav-link px-2 text-body-secondary">Recettes</a></li>
-          <li class="nav-item"><a href="favoris.html" class="nav-link px-2 text-body-secondary">Mes Favoris</a></li>
-          <li class="nav-item"><a href="liste.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Accueil</a></li>
+          <li class="nav-item"><a href="pages/recettes.html" class="nav-link px-2 text-body-secondary">Recettes</a></li>
+          <li class="nav-item"><a href="pages/favoris.html" class="nav-link px-2 text-body-secondary">Mes Favoris</a></li>
+          <li class="nav-item"><a href="pages/liste.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/favori.js"></script>
-    <script src="../js/barre-recherche.js"></script>
-    <!-- <script src="../js/index.js"></script> -->
+    <script src="js/index.js"></script>
+    <script src="js/barre-recherche.js"></script>
 </body>
 </html>
