--- a/pages/liste.html
+++ b/pages/liste.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="images/favicon.png">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
     <title>HappyMeal</title>
     <style>
         .card-img-top {
@@ -57,7 +58,7 @@
           Ma Liste d'ingrédients
         </div>
         <div class="card-body">
-            <ul class="list-group list-group-flush "id="shopping-list-container"></ul>
+            <ul class="list-group list-group-flush" id="shopping-list-container"></ul>
         </div>
         <div class="card-footer">
             <button class="btn btn-danger" onclick="clearShoppingList()">Effacer la liste</button>
@@ -75,7 +76,6 @@
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="../js/liste.js"></script>
 </body>
 </html>
