--- a/pages/liste.html
+++ b/pages/liste.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="images/favicon.png">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>HappyMeal</title>
+
     <style>
         .card-img-top {
             object-fit: cover;
@@ -51,7 +53,7 @@
             </div>
         </div>
     </div>
-
+   <main>
     <div class="card text-center">
         <div class="card-header">
           Ma Liste d'ingrédients
@@ -61,9 +63,10 @@
         </div>
         <div class="card-footer">
             <button class="btn btn-danger" onclick="clearShoppingList()">Effacer la liste</button>
-            <button class="btn btn-primary" onclick="generatePDF()">Télécharger ma liste</button>
+            <button class="btn btn-primary" onclick="generatePDF()" id="pdf">Télécharger ma liste</button>
         </div>
     </div>
+   </main>
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
