--- a/pages/liste.html
+++ b/pages/liste.html
@@ -45,46 +45,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mx-auto">
-                    <h1 class="display-4 fw-bold">Retrouvez ici vos recettes favorites !</h1>
-                    <h3 class="fw-normal text-muted mb-4">"Mmhh....HappyMeal !"</h3>
+                    <h1 class="display-4 fw-bold">Voici votre liste de courses</h1>
+                    <h3 class="fw-normal text-muted mb-4">Vous n'êtes plus qu'à un clic du bonheur !</h3>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="album py-5 bg-body-tertiary">
-        <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="recipe-container">
-                <!-- Les recettes seront affichées ici sous forme de cards par 3 -->
-            </div>
+    <div class="card text-center">
+        <div class="card-header">
+          Ma Liste d'ingrédients
+        </div>
+        <div class="card-body">
+            <ul class="list-group list-group-flush " id= "shopping-list-container"></ul>
+        </div>
+        <div class="card-footer">
+            <button class="btn btn-danger" onclick="clearShoppingList()">Effacer la liste</button>
+            <button class="btn btn-primary" onclick="generatePDF()">Télécharger ma liste</button>
         </div>
     </div>
-    
-    <!-- Modal pour afficher les détails de la recette -->
-    <div class="modal fade" id="recipeModal" tabindex="-1" aria-labelledby="recipeModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="recipeModalLabel">Détails de la recette</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <img src="" class="img-fluid" id="recipeModalImage" alt="Image de la recette">
-                <h2 id="recipeModalName"></h2>
-                <p id="recipeModalDuration"></p>
-                <h3>Ingrédients</h3>
-                <ul id="recipeModalIngredients"></ul>
-                <h3>Étapes</h3>
-                <ul id="recipeModalSteps"></ul>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fermer</button>
-                <button type="button" class="btn btn-primary add-to-shopping-list-btn">Ajouter tous les ingrédients à ma liste</button>
-            </div>
-        </div>
-        </div>
-    </div>
-
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -96,7 +75,7 @@
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/favori.js"></script>
-    <script src="../js/barre-recherche.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <script src="../js/liste.js"></script>
 </body>
 </html>
