--- a/pages/recettes.html
+++ b/pages/recettes.html
@@ -6,7 +6,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/headers/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="../images/favicon.png">
     <title>HappyMeal</title>
     <style>
         .card-img-top {
@@ -23,13 +23,13 @@
     <header class="p-3 mb-3 border-bottom">
         <div class="container">
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <a href="../index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                 <img class="col-md-3 w-50" src="images/Happy-logo.png" alt="Logo HappyMeal">
             </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="pages/recettes.html" class="nav-link px-2 link-body-emphasis">Recettes</a></li>
-              <li><a href="pages/favoris.html" class="nav-link px-2 link-body-emphasis">Mes Favoris</a></li>
-              <li><a href="pages/liste.html" class="nav-link px-2 link-body-emphasis">Ma liste</a></li>
+              <li><a href="recettes.html" class="nav-link px-2 link-body-emphasis">Recettes</a></li>
+              <li><a href="favoris.html" class="nav-link px-2 link-body-emphasis">Mes Favoris</a></li>
+              <li><a href="liste.html" class="nav-link px-2 link-body-emphasis">Ma liste</a></li>
             </ul>
     
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -41,12 +41,12 @@
           </div>
         </div>        
     </header>
-    <div class="position-relative overflow-hidden p-3 p-md-4 m-md-2 text-center bg-body-tertiary" style="background-image: url('images/bg-index.jfif'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <div class="position-relative overflow-hidden p-3 p-md-4 m-md-2 text-center bg-body-tertiary" style="background-image: url('../images/bg-index.jfif'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mx-auto">
-                    <h1 class="display-4 fw-bold">Bienvenue chez HappyMeal</h1>
-                    <h3 class="fw-normal text-muted mb-4">"Venez comme vous êtes !"</h3>
+                    <h1 class="display-4 fw-bold">Nous sommes fiers de vous présenter toutes nos recettes</h1>
+                    <h3 class="fw-normal text-muted mb-4">Toutes nos recettes sont saines et variées !</h3>
                 </div>
             </div>
         </div>
@@ -54,9 +54,7 @@
 
     <div class="album py-5 bg-body-tertiary">
         <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="recipe-container">
-                <!-- Les recettes seront affichées ici sous forme de cards par 3 -->
-            </div>
+          <div class="row row-cols-1 row-cols-md-4 g-4" id="recipe-container"></div>
         </div>
     </div>
     <!-- Modal pour afficher les détails de la recette -->
@@ -83,18 +81,20 @@
         </div>
         </div>
     </div>
-
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-center" id="recipe-pagination"></ul>
+    </nav>
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Accueil</a></li>
-          <li class="nav-item"><a href="pages/recettes.html" class="nav-link px-2 text-body-secondary">Recettes</a></li>
-          <li class="nav-item"><a href="pages/favoris.html" class="nav-link px-2 text-body-secondary">Mes Favoris</a></li>
-          <li class="nav-item"><a href="pages/liste.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
+          <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Accueil</a></li>
+          <li class="nav-item"><a href="recettes.html" class="nav-link px-2 text-body-secondary">Recettes</a></li>
+          <li class="nav-item"><a href="favoris.html" class="nav-link px-2 text-body-secondary">Mes Favoris</a></li>
+          <li class="nav-item"><a href="liste.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>
-    <script src="js/barre-recherche.js"></script>
+    <script src="../js/recettes.js"></script>
+    <script src="../js/barre-recherche.js"></script>
 </body>
 </html>
