--- a/pages/planning.html
+++ b/pages/planning.html
@@ -112,11 +112,14 @@
           <li class="nav-item"><a href="recettes.html" class="nav-link px-2 text-body-secondary">Recettes</a></li>
           <li class="nav-item"><a href="favoris.html" class="nav-link px-2 text-body-secondary">Mes Favoris</a></li>
           <li class="nav-item"><a href="liste.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
-          <li class="nav-item"><a href="planning.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
+          <li class="nav-item"><a href="planning.html" class="nav-link px-2 text-body-secondary">Planning</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../js/planning.js"></script>
+    <script defer src="../js/recettes.js"></script>
+    <script src="../js/barre-recherche.js"></script>
+    
 </body>
 </html>
