--- a/pages/favoris.html
+++ b/pages/favoris.html
@@ -82,11 +82,42 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fermer</button>
                 <button type="button" class="btn btn-primary add-to-shopping-list-btn">Ajouter tous les ingrédients à ma liste</button>
+                <button type="button" class="btn btn-bg-warning.bg-gradient" id="mealPlanningButton">Planifiez votre repas</button>
             </div>
         </div>
         </div>
     </div>
-
+<!-- calendrier de la semaine  -->
+<section class="container" >
+    <h2>MON FOOD PLANNING</h2>
+    <p> Vous recommande de planifier les repas favoris!</p>            
+    <table class="table table-bordered" >
+      <thead>
+        <tr>
+          <th>Lundi</th>
+          <th>Mardi</th>
+          <th>Mercredi</th>
+          <th>Jeudi</th>
+          <th>Vendredi</th>
+          <th>Samedi</th>
+          <th>Dimanche</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+            <td id="recipeElementMonday"></td>
+            <td id="recipeElementTuesday"></td>
+            <td id="recipeElementWednesday"></td>
+            <td id="recipeElementThursday"></td>
+            <td id="recipeElementFriday"></td>
+            <td id="recipeElementSaturday"></td>
+            <td id="recipeElementSunday"></td>
+            
+        </tr>
+        
+      </tbody>
+    </table>
+</section>
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
