--- a/pages/liste.html
+++ b/pages/liste.html
@@ -8,9 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="images/favicon.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
-    <script defer   src="../js/barre-recherche.js"></script>
     <script defer src="../js/liste.js"></script>
-    <script defer src="../js/recettes.js"></script>
+
     <title>HappyMeal</title>
 
     <style>
@@ -57,7 +56,9 @@
             </div>
         </div>
     </div>
-
+    <tbody>
+        
+    </tbody>
     <div class="card text-center">
         <div class="card-header">
           Ma Liste d'ingrédients
