--- a/pages/favoris.html
+++ b/pages/favoris.html
@@ -88,7 +88,7 @@
         </div>
     </div>
 <!-- calendrier de la semaine  -->
-<section class="container" >
+<!-- <section class="container" >
     <h2>MON FOOD PLANNING</h2>
     <p> Vous recommande de planifier les repas favoris!</p>            
     <table class="table table-bordered" >
@@ -117,7 +117,7 @@
         
       </tbody>
     </table>
-</section>
+</section> -->
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
